--- a/templates/register.html
+++ b/templates/register.html
@@ -99,12 +99,8 @@
         <form class="login-box" method="POST">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <div class="show-password">
-                <input type="checkbox" id="show">
-                <label for="show">SHOW</label>
-            </div>
-            <button type="submit">LOGIN</button>
-            <p>Not a member? <a href="register.html">SIGN UP NOW</a></p>
+            <button type="submit">REGISTER</button>
+            <p>Already a member? <a href="login.html">Login in NOW</a></p>
         </form>
     </div>
 </body>
