--- a/templates/index.html
+++ b/templates/index.html
@@ -179,9 +179,9 @@
 
     <!-- Box 6: Placeholder -->
     <div class="text-center">
-      <a href="#" class="text-blue-500 hover:text-blue-700">
+      <a href="quiztime.html" class="text-blue-500 hover:text-blue-700">
         <div class="subject-img">
-          <img src="https://via.placeholder.com/280x160.png?text=Learning" alt="Learning" class="w-full h-full object-cover" />
+          <img src="{{ url_for('static', filename='images/quiztime.png') }}" alt="Learning" class="w-full h-full object-cover" />
         </div>
         <div class="mt-2 text-lg font-semibold">Learning</div>
       </a>
