--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <title>Growing Up - Assignments</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -13,7 +14,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: inherit;
       margin: 0;
       padding: 0;
     }
@@ -115,7 +116,7 @@
   <!-- Top Bar -->
   <div class="flex justify-between items-center mb-6">
     <div class="text-black text-xl">{{today_date}}</div>
-    <div></div>
+    <div><a href="/logout.html">Logout</a></div>
   </div>
 
   <!-- Title Section -->
