--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
+    font-family: "Calibri", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,3 +191,4 @@ body {
     border-radius: 5px;
     display: inline-block;
 }
+
