--- a/templates/fire.html
+++ b/templates/fire.html
@@ -14,7 +14,7 @@
     <div class="border rounded-xl p-6 bg-red-50 hover:bg-red-100 transition">
       <h2 class="text-xl font-semibold text-red-700">In Case of Fire</h2>
       <p class="text-gray-700 mt-2">Learn essential fire safety tips to protect yourself and others during a fire emergency.</p>
-      <a href="https://www.scdf.gov.sg/home/fire-safety/fire-safety-tips" target="_blank" class="inline-block mt-4 px-4 py-2 bg-red-700 text-white rounded hover:bg-red-800 transition">
+      <a href="https://www.firstaidtraining.com.sg/fire-safety-tips" class="inline-block mt-4 px-4 py-2 bg-red-700 text-white rounded hover:bg-red-800 transition">
         Fire Safety Tips
       </a>
     </div>
