--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -14,7 +14,7 @@
     <div class="border rounded-xl p-6 bg-purple-50 hover:bg-purple-100 transition">
       <h2 class="text-xl font-semibold text-purple-700">Life Insurance</h2>
       <p class="text-gray-700 mt-2">Learn more about AIA’s whole life insurance plans and how life dividends work.</p>
-      <a href="https://www.aia.com.sg/en/our-products/whole-life-insurance/aia-life-dividends.html" target="_blank" class="inline-block mt-4 px-4 py-2 bg-purple-700 text-white rounded hover:bg-purple-800 transition">
+      <a href="https://www.aia.com.sg/en/our-products/life-insurance/whole-life-insurance?highlights=&product=aia-sg%3Aproducts%2Fcategories%2Flife-insurance%2Fwhole-life-insurance&productFeatures=&priceMin=0&priceMax=1000&sortBy=dateUpdated&filterTab=" target="_blank" class="inline-block mt-4 px-4 py-2 bg-purple-700 text-white rounded hover:bg-purple-800 transition">
         AIA Life Insurance
       </a>
     </div>
