--- a/templates/Finance.html
+++ b/templates/Finance.html
@@ -27,7 +27,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat with Ollama</title>
     <style>
-        body { font-family: Arial, sans-serif; }
+        
+        body{
+          font-family: "Calibri", sans-serif;
+      background: linear-gradient(to top, #7cc576 40%, #a3e0ff 100%);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
         .chatbox {
             position: fixed;
             bottom: 20px;
@@ -73,7 +80,7 @@
     </style>
     <style>
         body {
-            font-family: Arial, sans-serif;
+          font-family: "Calibri", sans-serif;
             background-color: #f8f9fa;
             margin: 0;
             padding: 0;
