--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      font-family: inherit;
+      font-family: "Calibri", sans-serif;
       margin: 0;
       padding: 0;
     }
@@ -198,7 +198,7 @@
   <!-- Chatbox -->
   <div id="chatbox" class="chatbox hidden">
     <div class="chat-header">
-      <span class="chat-title">Chabot</span>
+      <span class="chat-title">Ask Growing Up</span>
       <button class="close-button" onclick="closeChat()">✖</button>
     </div>
     <div id="chat-messages" class="chat-messages"></div>
