--- a/templates/shortcake.html
+++ b/templates/shortcake.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Calibri", sans-serif;
       max-width: 900px;
       margin: auto;
       padding: 20px;
