--- a/templates/accountopening.html
+++ b/templates/accountopening.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <title>Open Bank Account Info</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body{
+      background: linear-gradient(to top, #7cc576 40%, #a3e0ff 100%);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 p-8">
 
@@ -11,19 +19,19 @@
     <h1 class="text-3xl font-bold text-blue-800 text-center">Open a Bank Account</h1>
 
     <!-- DBS -->
-    <div class="border rounded-xl p-6 bg-blue-50 hover:bg-blue-100 transition">
-      <h2 class="text-xl font-semibold text-blue-700">DBS/POSB Bank</h2>
+    <div class="border rounded-xl p-6 bg-red-50 hover:bg-red-100 transition">
+      <h2 class="text-xl font-semibold text-red-700">DBS/POSB Bank</h2>
       <p class="text-gray-700 mt-2">Start your account opening process easily online with DBS.</p>
-      <a href="https://internet-banking.dbs.com.sg/ibAPL/Welcome" target="_blank" class="inline-block mt-4 px-4 py-2 bg-blue-700 text-white rounded hover:bg-blue-800 transition">
+      <a href="https://internet-banking.dbs.com.sg/ibAPL/Welcome" target="_blank" class="inline-block mt-4 px-4 py-2 bg-red-700 text-white rounded hover:bg-red-800 transition">
         Open with DBS
       </a>
     </div>
 
     <!-- UOB -->
-    <div class="border rounded-xl p-6 bg-red-50 hover:bg-red-100 transition">
-      <h2 class="text-xl font-semibold text-red-700">UOB Bank</h2>
+    <div class="border rounded-xl p-6 bg-blue-50 hover:bg-blue-100 transition">
+      <h2 class="text-xl font-semibold text-blue-700">UOB Bank</h2>
       <p class="text-gray-700 mt-2">Enjoy UOB's account opening promotion and start banking today.</p>
-      <a href=" https://www.uob.com.sg/personal/save/everyday-accounts/one-account.page?s_cid=grm:sg:paid:sea:bg:brand:tx:others:cura1:270824-evergreen:na:product:ms-go&vid=mindshare-bing-casa&pid=CAPBEXP&ef_id=a7b52fd1d99e1ebb146147dcd8d1ea57:G:s&s_kwcid=AL!810!10!77584493664418!!!!77584673178614!!485397692!1241349687811711" target="_blank" class="inline-block mt-4 px-4 py-2 bg-red-700 text-white rounded hover:bg-red-800 transition">
+      <a href=" https://www.uob.com.sg/personal/save/everyday-accounts/one-account.page?s_cid=grm:sg:paid:sea:bg:brand:tx:others:cura1:270824-evergreen:na:product:ms-go&vid=mindshare-bing-casa&pid=CAPBEXP&ef_id=a7b52fd1d99e1ebb146147dcd8d1ea57:G:s&s_kwcid=AL!810!10!77584493664418!!!!77584673178614!!485397692!1241349687811711" target="_blank" class="inline-block mt-4 px-4 py-2 bg-blue-700 text-white rounded hover:bg-blue-800 transition">
         Open with UOB
       </a>
     </div>
