--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -58,7 +58,7 @@
 
     <!-- Card 5 -->
     <a href="game.exe" download class="block bg-white rounded-xl overflow-hidden shadow-md hover:scale-105 transition-transform duration-300">
-      <img src="{{ url_for('static', filename='images/download.png') }}" alt="Download Backing Adventure" class="w-full h-56 object-cover">
+      <img src="{{ url_for('static', filename='images/gameicon.png') }}" alt="Download Backing Adventure" class="w-full h-56 object-cover">
       <div class="p-4">
         <p class="text-pink-600 text-sm font-medium">Game</p>
         <h3 class="text-pink-700 font-bold text-lg mt-1">Download Baking Adventure</h3>
