--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            font-family: 'Poppins', sans-serif;
+            font-family: "Calibri", sans-serif;
             margin: 0;
         }
 
