--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <title>Insurance Info</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body{
+      background: linear-gradient(to top, #7cc576 40%, #a3e0ff 100%);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 p-8 font-sans">
 
