--- a/templates/music.html
+++ b/templates/music.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Music - Sing Along</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
 </head>
 <body class="bg-indigo-50 p-8 font-sans">
 
