--- a/templates/recipes/brownies.html
+++ b/templates/recipes/brownies.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bars & Slices</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
   <script>
     function sendMessage() {
         let inputField = document.getElementById("user-input");
