--- a/templates/Survivalskills.html
+++ b/templates/Survivalskills.html
@@ -61,7 +61,17 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M7 8h10M7 12h4m1 8h.01M12 3C7.58 3 4 6.58 4 11s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8z" />
             </svg>
-            DISABLED
+            <a onclick="onClickEnabled()" id="sharing-access" style="cursor: pointer;">DISABLED</a>
+            <script>
+              function onClickEnabled() {
+              const sharingAccessElement = document.getElementById('sharing-access');
+              if (sharingAccessElement.textContent === 'DISABLED') {
+                sharingAccessElement.textContent = 'ENABLED';
+              } else {
+                sharingAccessElement.textContent = 'DISABLED';
+              }
+              }
+            </script>
           </div>
         </div>
 
