--- a/templates/recipes/chocolate.html
+++ b/templates/recipes/chocolate.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>The Ultimate Fudgy Brownies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
   <style>
     body {
       font-family: "Calibri", sans-serif;
