--- a/templates/recipes/pudding.html
+++ b/templates/recipes/pudding.html
@@ -6,6 +6,17 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
   <title>Sticky Date Pudding</title>
 </head>
+<style>
+  body {
+       font-family: "Calibri", sans-serif;
+
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      background: rgb(255, 241, 242);
+      color: #333;
+    }
+</style>
 <body>
   <h1>STICKY DATE PUDDING (AKA STICKY TOFFEE PUDDING)</h1>
   
