--- a/templates/quiztime.html
+++ b/templates/quiztime.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Quiz for Students</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
@@ -44,35 +45,45 @@
 <body>
   <div class="quiz-container">
     <h2>Quiz for Students!</h2>
-    <form id="quizForm">
+    <form id="quizForm" method="POST">
       <!-- Question 1 -->
       <div class="question">
-        <p>1. What is money used for?</p>
-        <label><input type="radio" name="q1" value="b"> To buy things we need and want</label><br>
-        <label><input type="radio" name="q1" value="a"> To play games</label><br>
-        <label><input type="radio" name="q1" value="c"> To decorate the house</label>
+      <p>1. What is money used for?</p>
+      <label><input type="radio" name="q1" value="a"> To buy things we need and want</label><br>
+      <label><input type="radio" name="q1" value="b"> To play games</label><br>
+      <label><input type="radio" name="q1" value="c"> To decorate the house</label>
       </div>
 
       <!-- Question 2 -->
       <div class="question">
-        <p>2. What is NOT a type of insurance?</p>
-        <label><input type="radio" name="q2" value="b"> Health Insurance </label><br>
-        <label><input type="radio" name="q2" value="a"> Life Insurance </label><br>
-        <label><input type="radio" name="q2" value="c"> Money Insurance </label>
+      <p>2. What is NOT a type of insurance?</p>
+      <label><input type="radio" name="q2" value="a"> Health Insurance </label><br>
+      <label><input type="radio" name="q2" value="b"> Life Insurance </label><br>
+      <label><input type="radio" name="q2" value="c"> Money Insurance </label>
       </div>
 
       <!-- Question 3 -->
       <div class="question">
-        <p>3. When a person do when in a fire situation?</p>
-        <label><input type="radio" name="q3" value="c"> Takes the lift to run away<br>
-          <label><input type="radio" name="q3" value="a"> Cover with a wet blanket</label><br>
-          <label><input type="radio" name="q3" value="b"> Lie in Bed and Scream for help </label>
+      <p>3. When a person do when in a fire situation?</p>
+      <label><input type="radio" name="q3" value="a"> Takes the lift to run away</label><br>
+      <label><input type="radio" name="q3" value="b"> Cover with a wet blanket</label><br>
+      <label><input type="radio" name="q3" value="c"> Lie in Bed and Scream for help </label>
       </div>
 
       <!-- Question 4 -->
       <div class="question">
-        <p>4. What ingredient is needed for baking? </p>
-        <label><input type="radio" name="q4" value="a"> Eggs</label><br>
-        <label><input type="radio" name="q4" value="b"> Flour</label><br>
-        <label><input type="radio" name="q4" value="b"> Oil</label><br>
-        <label><input type="radio" name
+      <p>4. What ingredient is needed for baking? </p>
+      <label><input type="radio" name="q4" value="a"> Eggs</label><br>
+      <label><input type="radio" name="q4" value="b"> Flour</label><br>
+      <label><input type="radio" name="q4" value="c"> Oil</label><br>
+      </div>
+      <div class="question">
+        <p>5. What is a healthy type of cooking?</p>
+        <label><input type="radio" name="q5" value="a"> Steaming </label><br>
+        <label><input type="radio" name="q5" value="b"> Frying</label><br>
+        <label><input type="radio" name="q5" value="c"> Barbeque </label><br>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</body>
