--- a/templates/recipes/salted-cookies.html
+++ b/templates/recipes/salted-cookies.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='inner-pages.css') }}">
   <title>Salted Brown Butter Chocolate Chip Cookies</title>
+  <style>
+    body {
+       font-family: "Calibri", sans-serif;
 
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      background: rgb(255, 241, 242);
+      color: #333;
+    }
+  </style>
 </head>
 <body>
   <h1>SALTED BROWN BUTTER CHOCOLATE CHIP COOKIES</h1>
